--- a/angular.json
+++ b/angular.json
@@ -127,5 +127,8 @@
       }
     }
   },
-  "defaultProject": "duyme10"
+  "defaultProject": "duyme10",
+  "cli": {
+    "analytics": "4872535a-f943-4048-aef8-c7ac39d939d0"
+  }
 }
